# 3dgen-demoroom

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md
.github/workflows/: deploy.yml  web-checks.yml
bench/: README.md  pyproject.toml
bench/src/bench_harness/: __init__.py  cli.py  container_entrypoint.py  meta.py  runpod.py  runpod_handoff.py  runpod_runtime.py  site_data.py  tasks.py  uploader.py  watchdog.py
bench/tests/: test_3dtopia_xl_runner.py  test_cli.py  test_container_entrypoint.py  test_direct3d_s2_runner.py  test_docker_build_script.py  test_hunyuan3d_21_runner.py  test_meta.py  test_partcrafter_runner.py  test_pixal3d_runner.py  test_runner_utils.py  test_runpod.py  test_runpod_handoff.py  test_runpod_runtime.py  test_sf3d_runner.py  test_site_data.py  test_step1x_3d_runner.py  test_tasks.py  test_trellis1_runner.py  test_trellis2_runner.py  test_triposg_runner.py  test_triposr_runner.py  test_uploader.py  test_watchdog.py
docs/: architecture.md
docs/design/: benchmark-tasks.md  ui-review-fable.md
docs/research/: README.md  cloudflare-usage-and-domain-fable.md  gpu-rental-codex.md  gpu-rental-fable.md  gpu-rental-merged.md  models-codex.md  models-fable.md  models-merged.md  orientation-alignment-codex.md  runpod-large-artifacts-codex.md  thumbnail-generation-codex.md  viewer-hosting-codex.md  (+2 more)
scripts/: docker-build-model.ps1
tasks/: tasks.json
web/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  thumbnail-render.html  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.worker.config.ts  wrangler.jsonc
(+123 files in other folders)
