[project]
name = "3dgen-bench-harness"
version = "0.1.0"
description = "Benchmark execution harness for 3DGen DemoRoom model runs."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.42",
    "pillow>=12.3.0",
]

[project.scripts]
bench-harness = "bench_harness.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bench_harness"
module-root = "src"
